# rust-gamedev-experiement

./: Cargo.toml
src/: main.rs
src/framework/: bare_scene.rs  mod.rs  prelude.rs  scene.rs
src/framework/actor/: actor.rs  component.rs  context.rs  controls.rs  holder.rs  mod.rs
src/framework/scene/: base_scene.rs  controls.rs  holder.rs  mod.rs  scene.rs
