[package]
name = "neolisp"
version = "0.1.0"
authors = ["Nils 'Linkie Pi' Reid <nils.reid@neoshadow.co>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
raylib = { git = "https://github.com/deltaphc/raylib-rs", branch = "master" }
failure = "0.1.7"
